--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -49,7 +49,7 @@
 }
 
 .project-grid {
-    margin: auto;
+    margin: 0 25% 0 25%;
     padding-top: 30px;
     padding-bottom: 50px;
     justify-content: center;
