--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="right-abt-hero">
         <h1 class="hero-text">about me.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        <p class="hero-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
         Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
         Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
         Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante.<br><br>
