--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -13,20 +13,15 @@
     border-radius: 10px;
 }
 
-@media (max-width: 1120px) {
-
-}
-
 .about-hero {
     width: 100%;
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 50% 50%;
     grid-auto-flow: dense;
     padding: 0;
     margin: 0;
     background-color: var(--off-white);
 }
-
 
 .abt-hero-image {
     margin: 0;
@@ -35,19 +30,16 @@
 
 }
 
-
 .left-abt-hero {
     padding: 0 0;
+    padding-top: 100px;
     display: flex;
     justify-content: center;
 }
 
-
-
 .right-abt-hero {
     margin: 0; 
     padding-top: 300px;
-    padding-right: 100px;
 }
 .hero-text {
     margin: 0;
@@ -76,10 +68,19 @@
         text-align: center;
     }
 
+    .hero-subtext {
+        width: 100%;
+    }
+
+    .left-abt-hero {
+        padding-top: 10%;
+    }
+
     .right-abt-hero {
-        display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
+        padding: 20% 5vw 0 5vw;
     }
 }
 
