--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -3,15 +3,20 @@
 <!--Hero Section-->
 
 <div class="hero">
-    <div class="left-hero">
-        <h3 class="cyruss-name">cyruss allen amante</h3>
-        <h1 class="title">software<br>engineering<br>student.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-        Morbi augue arcu, dapibus vel consequat ac, eleifend nec<br>eros. 
-        In mattis sem id lectus maximus, id facilisis libero<br>aliquam.</p>
-    </div>
-    <div class="right-hero">
-    <%= image_tag("home/hero.png", :alt => "Cyruss Allen Amante", :class => "hero-image") %>
+    <div class="hero-grid">
+        <div class="left-hero">
+            <h3 class="cyruss-name">cyruss allen amante</h3>
+            <h1 class="title">software</h1>
+            <h1 class="title">engineering</h1>
+            <h1 class="title">student.</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+            Morbi augue arcu, dapibus vel consequat ac, eleifend nec<br>eros. 
+            In mattis sem id lectus maximus, id facilisis libero<br>aliquam.</p>
+            <%= image_tag("abstract/square-grid.png", :alt => "square-grid", :class => "square-grid") %>
+        </div>
+        <div class="right-hero">
+            <%= image_tag("home/hero.png", :alt => "Cyruss Allen Amante", :class => "hero-image") %>
+        </div>
     </div>
 </div>
 
