completed content-1 responsiveness.

--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -76,6 +76,10 @@
         padding-top: 10%;
     }
 
+    .text-area {
+        padding: 0 25% 0 25%;
+    }
+
     .right-abt-hero {
         justify-content: center;
         align-items: center;
