--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -27,26 +27,32 @@
     <%= image_tag("abstract/slime.png", :alt => "slime", :class => "slime", :id => "slime-2", :draggable => "false") %>
     <%= image_tag("abstract/lines.png", :alt => "lines", :class => "lines", :id => "lines-1", :draggable => "false") %>
     <%= image_tag("abstract/lines.png", :alt => "lines", :class => "lines", :id => "lines-2", :draggable => "false") %>
+    <%= image_tag("abstract/arrows.png", :alt => "arrows", :class => "arrows", :id => "arrows-1", :draggable => "false") %>
+    <%= image_tag("abstract/arrows.png", :alt => "arrows", :class => "arrows", :id => "arrows-2", :draggable => "false") %>
     <div class="content-1-grid">
         <div class="left-content-1">
             <h2 class="c1h" id="lch1">title here.</h2>
-            <p class="c1t" id="lct1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-            Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-            Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-            Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-            Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-            Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+            <div class="text-area">
+                <p class="c1t" id="lct1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
+                Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
+                Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
+                Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
+                Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
+                Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+            </div>
         </div>
         <div class="right-content-1">
             <h2 class="c1h" id="rch1">title here.</h2>
-            <p class="c1t" id="rct1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-            Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-            Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-            Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-            Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-            Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+            <div class="text-area">
+                <p class="c1t" id="rct1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
+                Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
+                Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
+                Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
+                Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
+                Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+            </div>
         </div>
     </div>
 </div>
