--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -146,6 +146,18 @@ p {
     rotate: 180deg;
 }
 
+#arrows-1 {
+    position: absolute;
+    top: 300px;
+    left: 100px;
+}
+
+#arrows-2 {
+    position: absolute;
+    bottom: 300px;
+    right: 100px;
+    rotate: 180deg;
+}
 
 #slime-1 {
     position: absolute;
@@ -343,7 +355,6 @@ p {
         padding: 0;
     }
 
-
     .content-1 {
         display: flex;
         align-items: center;
@@ -352,10 +363,24 @@ p {
     }
     .left-content-1, .right-content-1 {
         padding: 0;
-        margin: auto 0 auto 0;
+        margin: auto 0% auto 0%;
     }
      
     .left-content-1 {
         padding-bottom: 100px;
     }
+
+    #arrows-1 {
+        position: absolute;
+        top: 350px;
+        left: 50px;
+    }
+    
+    #arrows-2 {
+        position: absolute;
+        bottom: 350px;
+        right: 50px;
+        rotate: 180deg;
+    }
+
 }
