--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -61,6 +61,7 @@
 <!--Content 2 Section-->
 
 <div class = "content_2">
+    <%= image_tag("abstract/divider.png", :alt => "divider", :class => "divider", :draggable => "false") %>
     <div class = "left-content-2">
         <h2 class="ch2">title here.</h2>
         <p class="ct2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
