--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -17,7 +17,7 @@
       );
 }
 
-.hero-grid, .content-1-grid {
+.hero-grid, .content-1-grid, .content-2-grid {
     display: grid;
     grid-template-columns: 50% 50%;
     width: 100%;
@@ -227,11 +227,11 @@ p {
 
 .ct2 {
     padding-top: 0;
-    margin-top: 0;
     font-size: 1.2em;
     color: var(--blue);
-    margin: 0 35% 0.8em 35%;
+    margin: 0 25% 0.8em 25%;
     text-align: center;
+    
 }
 
 .content-2-btn {
@@ -240,10 +240,11 @@ p {
     color: var(--blue);
     background-color: var(--green);
     border: 2px solid var(--blue);
+    border-radius: 5px;
     box-shadow: none;
     text-align: center;
-    margin:0 auto;
-    padding: 0.3em 3em 0.3em 3em;
+    margin:1em auto;
+    padding: 0.2em 2.5em 0.2em 2.5em;
     display:block;
 }
 
@@ -252,7 +253,41 @@ p {
     background-color: var(--blue);
 }
 
+.slime-bl {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 
+}
+
+.slime-br {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.slime-br, .slime-bl {
+    width: 20%;
+}
+
+.circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.dotted-grid {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 15%;
+}
+
+.dotted-line {
+    margin: 0 auto;
+    display: block;
+
+}
 
 @media (max-width:1120px) {
 
@@ -322,7 +357,7 @@ p {
           );
     }
 
-    .hero-grid, .content-1-grid {
+    .hero-grid, .content-1-grid, .content-2-grid {
         grid-template-columns: 1fr;
         align-items: center;
         justify-content: center;
@@ -337,18 +372,23 @@ p {
     }
 
     #lines-1 {
+        top: auto;
+        left: auto;
         position: absolute;
-        top: 80px;
-        left: 50px;
-        rotate: 180deg;
+        bottom: 80px;
+        right: 50px;
+        
 
         
     }
     
     #lines-2 {
-        rotate: 360deg;
         position: absolute;
-        bottom: 80px;
+        top: 80px;
+        left: 50px;
+        bottom: auto;
+        right: auto;
+
     }
 
     .c1h, .c1t {
@@ -392,8 +432,28 @@ p {
     }
 
     .divider {
-        rotate: 90deg;      
-        height: 400px;  
+        
+        height: 400px;
+        transform: translate(-50%, -50%) rotate(90deg);  
+        
     }
 
+    .left-content-2 {
+        padding-bottom: 100px;
+    }
+
+    .right-content-2 {
+        text-align: center;
+        padding-top: 100px;
+    }
+
+    .ct2 {
+        margin: 0 10%;
+
+    }
+
+    .slime-br, .slime-bl, .circles, .dotted-grid {
+        width: 35%;
+    }
+    
 }
