--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -12,10 +12,10 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
             Morbi augue arcu, dapibus vel consequat ac, eleifend nec<br>eros. 
             In mattis sem id lectus maximus, id facilisis libero<br>aliquam.</p>
-            <%= image_tag("abstract/square-grid.png", :alt => "square-grid", :class => "square-grid", :draggable => "false") %>
+            <%= image_tag("abstract/square-grid.svg", :alt => "square-grid", :class => "square-grid", :draggable => "false") %>
         </div>
         <div class="right-hero">
-            <%= image_tag("home/hero.png", :alt => "Cyruss Allen Amante", :class => "hero-image", :draggable => "false") %>
+            <%= image_tag("home/hero.svg", :alt => "Cyruss Allen Amante", :class => "hero-image", :draggable => "false") %>
         </div>
     </div>
 </div>
@@ -23,12 +23,12 @@
 <!--Content 1 Section-->
 
 <div class = "content_1">
-    <%= image_tag("abstract/slime.png", :alt => "slime", :class => "slime", :id => "slime-1", :draggable => "false") %>
-    <%= image_tag("abstract/slime.png", :alt => "slime", :class => "slime", :id => "slime-2", :draggable => "false") %>
-    <%= image_tag("abstract/lines.png", :alt => "lines", :class => "lines", :id => "lines-1", :draggable => "false") %>
-    <%= image_tag("abstract/lines.png", :alt => "lines", :class => "lines", :id => "lines-2", :draggable => "false") %>
-    <%= image_tag("abstract/arrows.png", :alt => "arrows", :class => "arrows", :id => "arrows-1", :draggable => "false") %>
-    <%= image_tag("abstract/arrows.png", :alt => "arrows", :class => "arrows", :id => "arrows-2", :draggable => "false") %>
+    <%= image_tag("abstract/slime.svg", :alt => "slime", :class => "slime", :id => "slime-1", :draggable => "false") %>
+    <%= image_tag("abstract/slime.svg", :alt => "slime", :class => "slime", :id => "slime-2", :draggable => "false") %>
+    <%= image_tag("abstract/lines.svg", :alt => "lines", :class => "lines", :id => "lines-1", :draggable => "false") %>
+    <%= image_tag("abstract/lines.svg", :alt => "lines", :class => "lines", :id => "lines-2", :draggable => "false") %>
+    <%= image_tag("abstract/arrows.svg", :alt => "arrows", :class => "arrows", :id => "arrows-1", :draggable => "false") %>
+    <%= image_tag("abstract/arrows.svg", :alt => "arrows", :class => "arrows", :id => "arrows-2", :draggable => "false") %>
     <div class="content-1-grid">
         <div class="left-content-1">
             <h2 class="c1h" id="lch1">title here.</h2>
@@ -61,27 +61,35 @@
 <!--Content 2 Section-->
 
 <div class = "content_2">
-    <%= image_tag("abstract/divider.png", :alt => "divider", :class => "divider", :draggable => "false") %>
-    <div class = "left-content-2">
-        <h2 class="ch2">title here.</h2>
-        <p class="ct2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-        Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-        Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-        Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-        Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-        Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
-        <button class="content-2-btn">button text</button>
-    </div>
-    <div class = "right-content-2">
-        <h2 class="ch2">title here.</h2>
-        <p class="ct2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-        Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-        Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-        Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-        Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-        Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
-        <button class="content-2-btn">button text</button>
+    <%= image_tag("abstract/divider.svg", :alt => "divider", :class => "divider", :draggable => "false") %>
+    <%= image_tag("abstract/slime-bl.svg", :alt => "slime-bl", :class => "slime-bl", :draggable => "false") %>
+    <%= image_tag("abstract/slime-br.svg", :alt => "slime-br", :class => "slime-br", :draggable => "false") %>
+    <%= image_tag("abstract/circles.svg", :alt => "circles", :class => "circles", :draggable => "false") %>
+    <%= image_tag("abstract/dotted-grid.svg", :alt => "dotted-grid", :class => "dotted-grid", :draggable => "false") %>
+    <div class="content-2-grid">
+        <div class = "left-content-2">
+            <%= image_tag("abstract/dotted-line.svg", :alt => "dotted-line", :class => "dotted-line", :draggable => "false") %>
+            <h2 class="ch2">title here.</h2>
+            <p class="ct2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
+            Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
+            Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
+            Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
+            Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
+            Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+            <button class="content-2-btn">button text</button>
+        </div>
+        <div class = "right-content-2">
+            <%= image_tag("abstract/dotted-line.svg", :alt => "dotted-line", :class => "dotted-line", :draggable => "false") %>
+            <h2 class="ch2">title here.</h2>
+            <p class="ct2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
+            Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
+            Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
+            Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
+            Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
+            Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+            <button class="content-2-btn">button text</button>
+        </div>
     </div>
 </div>
