--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -9,9 +9,9 @@
             <h1 class="title">software</h1>
             <h1 class="title">engineering</h1>
             <h1 class="title">student.</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-            Morbi augue arcu, dapibus vel consequat ac, eleifend nec<br>eros. 
-            In mattis sem id lectus maximus, id facilisis libero<br>aliquam.</p>
+            <p>A third year software engineering student from McMaster University. Currently looking for opportunities such as 
+            internships/co-ops related to SWE or software development. Is defined as a team player with time-managment skills and strong work ethic.
+            Always willing to learn new skills and adapt to unprecidented situations.</p>
             <%= image_tag("abstract/square-grid.svg", :alt => "square-grid", :class => "square-grid", :draggable => "false") %>
         </div>
         <div class="right-hero">
@@ -31,27 +31,19 @@
     <%= image_tag("abstract/arrows.svg", :alt => "arrows", :class => "arrows", :id => "arrows-2", :draggable => "false") %>
     <div class="content-1-grid">
         <div class="left-content-1">
-            <h2 class="c1h" id="lch1">title here.</h2>
+            <h2 class="c1h" id="lch1">development.</h2>
             <div class="text-area">
-                <p class="c1t" id="lct1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-                Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-                Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-                Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-                Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-                Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+                <p class="c1t" id="lct1">Software development is not just about programming. Building a product, that not only works, but works the right way
+                is what I strive to accomplish. The skills that I have right now are not perfect, but with time and dedication I believe I am a student who has
+                the potential to develop something big.</p>
             </div>
         </div>
         <div class="right-content-1">
-            <h2 class="c1h" id="rch1">title here.</h2>
+            <h2 class="c1h" id="rch1">engineering.</h2>
             <div class="text-area">
-                <p class="c1t" id="rct1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-                Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-                Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-                Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-                Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-                Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+                <p class="c1t" id="rct1">Throughout my undergraduate degree I have learned the importance of the mission that we as future engineers
+                must do. As I develop my skills, I become equipped with developing a project while enacting on the guidelines and values that engineers
+                across the globe keep. </p>
             </div>
         </div>
     </div>
@@ -69,27 +61,17 @@
     <div class="content-2-grid">
         <div class = "left-content-2">
             <%= image_tag("abstract/dotted-line.svg", :alt => "dotted-line", :class => "dotted-line", :draggable => "false") %>
-            <h2 class="ch2">title here.</h2>
-            <p class="ct2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-            Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-            Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-            Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-            Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-            Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
-            <button class="content-2-btn">button text</button>
+            <h2 class="ch2">my work.</h2>
+            <p class="ct2">I am continuously working towards improving my software engineering skills both within my studies and personal life as well. 
+            </p>
+            <%= button_to 'see my work.', 'projects', method: :get, class: 'content-2-btn' %>
         </div>
         <div class = "right-content-2">
             <%= image_tag("abstract/dotted-line.svg", :alt => "dotted-line", :class => "dotted-line", :draggable => "false") %>
-            <h2 class="ch2">title here.</h2>
-            <p class="ct2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-            Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-            Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante. 
-            Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-            Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-            Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
-            <button class="content-2-btn">button text</button>
+            <h2 class="ch2">my videos.</h2>
+            <p class="ct2">I upload them... well, maybe sometimes. On here, I upload videos pertaining to another hobby of mine, music. Covers,
+            original songs and just some of the things you can find on my channel.</p>
+            <%= button_to 'watch my videos.', 'https://bit.ly/sub2cy', method: :get, class: 'content-2-btn' %>
         </div>
     </div>
 </div>
