added about and project icons.

--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -7,13 +7,19 @@
     </div>
     <div class="right-abt-hero">
         <h1 class="hero-text">about me.</h1>
-        <p class="hero-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Cras et elit eu odio blandit cursus vel ac purus. Fusce sit amet pretium purus. 
-        Vivamus dapibus vitae arcu quis posuere. Fusce posuere eget orci eu lacinia. 
-        Quisque consectetur pharetra ex nec lobortis. Integer id interdum ante.<br><br>
-        Etiam in nibh luctus, vestibulum orci in, eleifend nunc. 
-        Suspendisse feugiat, ante sed dignissim volutpat, felis sem finibus urna, a egestas lectus enim nec nisl. 
-        Proin tincidunt dolor quis mi lacinia, ac viverra nulla convallis.</p>
+        <p class="hero-subtext">Hi there! I am a Software Engineering (B.Eng) student at McMaster University,
+        and I am passionate about creating elegant and efficient solutions to complex problems.<br><br>
+        Whether it is a challenging programming project or a technical issue that needs troubleshooting, 
+        I thrive on finding creative solutions that exceed expectations.<br><br>
+        My practical experience includes working as a Sales Associate and Information Technology Co-Op student, where I honed my customer service skills, 
+        managed databases, and tackled technical problems with out-of-the-box thinking. 
+        And in my free time, I love to work on personal projects that allow me to explore new languages and tools, 
+        like Java, Python, Ruby, HTML/CSS, and more.<br><br>
+        Beyond my technical skills, I possess a variety of soft skills that make me an excellent team player, 
+        including creativity, problem-solving, communication, adaptability, and leadership. 
+        I am always excited to learn from others and work collaboratively to achieve our shared goals.<br><br>
+        I am currently seeking new job opportunities in the software engineering field, and am eager to take on new challenges 
+        and contribute to innovative teams.</p>
     </div>
     
 </div>
