--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -31,7 +31,7 @@
     <%= image_tag("abstract/arrows.svg", :alt => "arrows", :class => "arrows", :id => "arrows-2", :draggable => "false") %>
     <div class="content-1-grid">
         <div class="left-content-1">
-            <h2 class="c1h" id="lch1">development.</h2>
+            <h2 class="c1h" id="lch1">develop.</h2>
             <div class="text-area">
                 <p class="c1t" id="lct1">Software development is not just about programming. Building a product, that not only works, but works the right way
                 is what I strive to accomplish. The skills that I have right now are not perfect, but with time and dedication I believe I am a student who has
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="right-content-1">
-            <h2 class="c1h" id="rch1">engineering.</h2>
+            <h2 class="c1h" id="rch1">engineer.</h2>
             <div class="text-area">
                 <p class="c1t" id="rct1">Throughout my undergraduate degree I have learned the importance of the mission that we as future engineers
                 must do. As I develop my skills, I become equipped with developing a project while enacting on the guidelines and values that engineers
