--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -39,7 +39,7 @@
 
 .right-abt-hero {
     margin: 0; 
-    padding-top: 300px;
+    padding-top: 100px;
 }
 .hero-text {
     margin: 0;
@@ -70,6 +70,7 @@
 
     .hero-subtext {
         width: 100%;
+        padding: 0;
     }
 
     .left-abt-hero {
