--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -82,7 +82,34 @@
         -ms-transition:  -ms-transform 0.2s;
         transition:  transform 0.2s;
       }
+    background-size: cover;
+    background-position: center;
 }
+
+#proj1 {
+    background-image: url('/assets/projects/website.svg');
+}
+
+#proj2 {
+    background-image: url('/assets/projects/pirate.svg');
+}
+
+#proj3 {
+    background-image: url('/assets/projects/calculator.svg');
+}
+
+#proj4 {
+    background-image: url('/assets/projects/recycle.svg');
+}
+
+#proj5 {
+    background-image: url('/assets/projects/robot.svg');
+}
+
+#proj6 {
+    background-image: url('/assets/projects/additional.svg');
+}
+
 .project-desc {
     align-self: flex-end;
     background-color: var(--gray);
@@ -94,6 +121,13 @@
     margin: 0;
     padding: 0;
     padding-left: 10px;
+    text-align: left;
+    width: 75%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 .proj-desc {
