--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -6,51 +6,64 @@
     <h3 class="project-subtitle">selected projects that I have worked on</h3>
     <div class="project-grid">
         <!--Project 1 Grid-->
-        <div class="project" id="proj1">
-            <div class="project-desc">
-                <h4 class="proj-title">project title</h4>
-                <p class="proj-desc">Quick description of project.</p>
+        <%= link_to root_path do %>     
+            <div class="project" id="proj1">
+                <div class="project-desc">
+                    <h4 class="proj-title">cyrussamante.com</h4>
+                    <p class="proj-desc">the website you are currently on! click to go back to the homepage.</p>
+                </div>
             </div>
-        </div>
+        <% end %>
 
         <!--Project 2 Grid-->
-        <div class="project">
-            <div class="project-desc">
-                <h4 class="proj-title">project title</h4>
-                <p class="proj-desc">Quick description of project.</p>
+        <%= link_to "https://docs.google.com/spreadsheets/d/1My97d9i4gzMeSncj6sokem-iDYgyY8X8VjroRvaCTWc/edit?usp=sharing" do %>
+            <div class="project" id="proj2">
+                <div class="project-desc">
+                    <h4 class="proj-title">piraten kapern simulator</h4>
+                    <p class="proj-desc">randomized and strategic game simulator.</p>
+                </div>
             </div>
-        </div>
+        <% end %>
 
         <!--Project 3 Grid-->
-        <div class="project">
+        <%= link_to "https://github.com/cyrussamante/Grades2Date" do %>
+        <div class="project" id="proj3">
             <div class="project-desc">
-                <h4 class="proj-title">project title</h4>
-                <p class="proj-desc">Quick description of project.</p>
+                <h4 class="proj-title">grades2date</h4>
+                <p class="proj-desc">a weighted GPA calculator created using python.</p>
             </div>
         </div>
+        <% end %>
+
 
         <!--Project 4 Grid-->
-        <div class="project">
-            <div class="project-desc">
-                <h4 class="proj-title">project title</h4>
-                <p class="proj-desc">Quick description of project.</p>
+        <%= link_to "/recyclinghopper.pdf" do %>
+            <div class="project" id="proj4">
+                <div class="project-desc">
+                    <h4 class="proj-title">recycling hopper mechanism</h4>
+                    <p class="proj-desc">a mechanism using a rotary actuator to deposit recyclable containers.</p>
+                </div>
             </div>
-        </div>
+        <% end %>
 
         <!--Project 5 Grid-->
-        <div class="project">
-            <div class="project-desc">
-                <h4 class="proj-title">project title</h4>
-                <p class="proj-desc">Quick description of project.</p>
+        <%= link_to "/getagrip.pdf" do %>
+            <div class="project" id="proj5">
+                <div class="project-desc">
+                    <h4 class="proj-title">get a grip!</h4>
+                    <p class="proj-desc">a computer system for using remote sensing and actuation.</p>
+                </div>
             </div>
-        </div>
+        <% end %>
 
         <!--Additional Projects Grid-->
-        <div class="project">
-            <div class="project-desc">
-                <h4 class="proj-title">additional projects</h4>
-                <p class="proj-desc">the remainder of my project work</p>
+        <%= link_to "https://docs.google.com/spreadsheets/d/1My97d9i4gzMeSncj6sokem-iDYgyY8X8VjroRvaCTWc/edit?usp=sharing" do %>
+            <div class="project" id="proj6">
+                <div class="project-desc">
+                    <h4 class="proj-title">additional projects</h4>
+                    <p class="proj-desc">the remainder of my project work all organized on a spreadsheet.</p>
+                </div>
             </div>
-        </div>
+        <% end %>
     </div>
 </div>
